using System;
using System.Collections;
using System.Collections.Generic;
using System.Globalization;
using UnityEngine;

public class BossAnimationModel
{
    public bool walk;
    public bool TakeDamage;
    public bool die;
    public bool attack01;
    public bool attack02;
    public bool attack03;
    public bool stand;
   
}
